2002-12-19  Ben Hines <benh57@users.sourceforge.net>

	* Services.pm: Allow whitespace after here-document separators.
	
2002-12-11  Ben Hines <benh57@users.sourceforge.net>

	* Services.pm, PkgVersion.pm: Pass filename to read_properties_var to 
	  clarify here-document error.
	
2002-12-11  Benjamin Reed <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: Added a key to the package object to track the
	"siblings" of a package.

	* Engine.pm: Added some code to check for sibling packages that are
	already installed or due to be installed, so that the user does not
	get asked to install something unless necessary (ie, if libungif-shlibs
	is already installed, it won't ask to choose between giflib and libungif).
	Also changed some of the other code to use the new "sibling" attribute
	from the PkgVersion.pm change above.

2002-12-04  Dave Morrison <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: Modify the test used during the non-CVS version of 
	fink selfupdate to check CURRENT_VERSION and download the file named 
	dists-###.tar.gz (rather than LATEST_VERSION and 
	packages-###.tar.gz)

2002-11-18  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Patch #608920: Add --keep-root-dir and --keep-build-dir.

2002-11-14  Justin Hallett <thesin@users.sourceforge.net>

	* Engine.pm: fixed scanpackage default section to use proper value.

2002-11-13  Max Horn  <max@quendi.de>

	* Engine.pm: Install build dependencies when doing a rebuild (bug #637689).

2002-11-13  Chris Zubrzycki <beren12@users.sf.net>

	* PkgVersion.pm: Fix the path of install-info. It is in %p/sbin, not %p/bin

2002-11-12  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Apparently the install-info of texinfo is incompatible with
	 the dpkg one. Hence we reverse the previous change and instead harcode the
	 location of our install-info.

2002-11-11  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Use "--info-dir" instead of "--infodir" as argument to 